# iGyne_old

./: CMakeCache.txt  CMakeLists.txt  README.md  iGyne.py  iGynePy.py  iGynePy.s4ext  qTemplateSheetWidget.cxx
Metrics/: CMakeLists.txt
Template/: ~$$template.~vsd
Template/4points/: Template.mrml
Wizard/: CMakeLists.txt  Copy of iGyneSecondRegistrationStep.py  Helper.py  __init__.py  backup2.py  backupUI.py  iGyneFirstRegistrationStep.py  iGyneFirstRegistrationStep.py~  iGyneLoadDiagnosticSeriesStep.py  iGyneLoadModelStep.py  iGyneLoadModelStep.py~  iGyneNeedlePlanningStep.py  iGyneNeedleSegmentationStep.py  iGyneRegisterStep.py  iGyneRegistrationStep.py  iGyneSecondRegistrationStep.py  iGyneSecondRegistrationStep.py~  iGyneSegmentROI.py  iGyneSelectApplicatorStep.py  iGyneSelectModalityStep.py  iGyneSelectProcedureStep-UIbackup.py  iGyneSelectProcedureStep-backup.py  iGyneSelectProcedureStep.py  iGyneStep.py  iGyneUI.py  new  2.py
iGynePyTemplate/: CMakeLists.txt
iGynePyTemplate/Template/: CMakeLists.txt
iGynePyTemplate/Template/3points/: CMakeLists.txt
iGynePyTemplate/Template/4points/: CMakeLists.txt
iGyneWizard/: CMakeLists.txt  Helper.py  __init__.py  iGyneFirstRegistrationStep.py  iGyneLoadModelStep.py  iGyneNeedlePlanningStep.py  iGyneNeedleSegmentationStep.py  iGyneSecondRegistrationStep.py  iGyneSelectApplicatorStep.py  iGyneSelectProcedureStep.py  iGyneStep.py
